--- a/frontend/adopt-me/package.json
+++ b/frontend/adopt-me/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "parcel src/index.html",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "format": "prettier \"src/**/*.{js,html}\" --write",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,10 +13,13 @@
   "author": "Felipe Moreno Borges",
   "license": "ISC",
   "dependencies": {
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0"
+    "eslint-config-prettier": "^6.10.0",
+    "parcel-bundler": "^1.12.4"
   }
 }
