--- a/frontend/adopt-me/package.json
+++ b/frontend/adopt-me/package.json
@@ -18,8 +18,12 @@
     "react-dom": "^16.13.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
     "parcel-bundler": "^1.12.4"
   }
 }
