--- a/frontend/adopt-me/package.json
+++ b/frontend/adopt-me/package.json
@@ -13,6 +13,7 @@
   "author": "Felipe Moreno Borges",
   "license": "ISC",
   "dependencies": {
+    "@frontendmasters/pet": "^1.0.3",
     "prettier": "^1.19.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
