--- a/frontend/adopt-me/package.json
+++ b/frontend/adopt-me/package.json
@@ -27,5 +27,8 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
     "parcel-bundler": "^1.12.4"
-  }
+  },
+  "browserslist": [
+    "last 2 Chrome versions"
+  ]
 }
